Migrations, Service implementations, better tests